--- a/chat-app/src/index.css
+++ b/chat-app/src/index.css
@@ -57,3 +57,44 @@
 .form-input input {
   height: 30px;
 }
+
+.chat {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  margin-top: 50px;
+  width: 900px;
+  height: 800px;
+  border: 2px solid rgb(50, 1, 114);
+}
+
+.message {
+  font-size: 16pt;
+  margin: 10px 15px;
+}
+
+.message-send {
+  display: flex;
+  margin: 5px;
+  margin-top: auto;
+  border: 2px solid rgb(50, 1, 114);
+}
+
+.message-input {
+  width: 800px;
+  height: 50px;
+  font-size: 12pt;
+  padding: 0px 5px;
+  border: none;
+  outline: none;
+}
+
+.message-btn {
+  border: none;
+  height: 55px;
+  width: 75px;
+  margin-left: 1px;
+  background-color:rgb(145, 139, 146);
+  color: white;
+  font-size: 14pt;
+}
