--- a/chat-app/src/index.css
+++ b/chat-app/src/index.css
@@ -5,7 +5,7 @@
 
 .navbar {
   display: flex;
-  background-color: blue;
+  background-color: rgb(50, 1, 114);
   align-items: center;
 }
 
@@ -74,21 +74,45 @@
   border: 5px solid rgb(50, 1, 114);
 }
 
+.messages {
+  overflow-y: auto;
+}
+
+.messages::-webkit-scrollbar {
+  width: 15px;
+}
+
+.messages::-webkit-scrollbar-track {
+  background-color: rgb(83, 51, 124);
+  box-shadow: inset 0 0 5px rgb(141, 104, 175);
+  border-radius: 5px;
+}
+
+.messages::-webkit-scrollbar-thumb {
+  background-color: rgb(50, 1, 114);
+  border-radius: 20px;
+  border: 3px solid rgb(83, 51, 124); 
+}
+
 .message {
   font-size: 16pt;
-  margin: 10px 15px;
+  margin: 10px 10px;
 }
 
 .message-send {
+  margin-top: auto;
+  width: 100%;
+}
+
+.message-send form {
   display: flex;
   margin: 5px;
-  margin-top: auto;
-  border: 2px solid rgb(50, 1, 114);
+  width: 97%;
+  border: 3px solid rgb(50, 1, 114);
 }
 
 .message-input {
-  width: 800px;
-  height: 50px;
+  width: 100%;
   font-size: 12pt;
   padding: 0px 5px;
   border: none;
@@ -97,10 +121,10 @@
 
 .message-btn {
   border: none;
+  border-left: 3px solid rgb(50, 1, 114);
   height: 55px;
   width: 75px;
-  margin-left: 1px;
-  background-color:rgb(145, 139, 146);
+  background-color:rgb(50, 1, 114);
   color: white;
   font-size: 14pt;
 }
@@ -113,4 +137,10 @@
 
 .members p {
   font-size: 20pt;
+}
+
+.serverSelect {
+  height: 25px;
+  font-size: 16pt;
+  margin: 10px;
 }
